# data_compression

./: .gitmodules  CMakeLists.txt  README  README.md  package.xml
catkinized_libav/: CHANGELOG.rst  CMakeLists.txt  package.xml
image_transport_viewer/: CMakeLists.txt  package.xml
image_transport_viewer/src/: viewer.cpp
launch/: record.launch
libav/: .gitignore  CMakeLists.txt  package.xml
libav_compressor/: CMakeLists.txt  package.xml
libav_compressor/launch/: test_quality.launch  video_loader.launch  video_saver.launch  video_saver.launch~
libav_compressor/scripts/: batch_compressor.py  batch_decompressor.py  online_compressor.py  video_decompressor.py
libav_compressor/src/: test_quality.cpp
libav_image_transport/: CHANGELOG.rst  CMakeLists.txt  README  libav_plugins.xml  package.xml
libav_image_transport/cfg/: config.hpp.in  libavPublisher.cfg  libavSubscriber.cfg  libav_publisher.cfg
libav_image_transport/cmake/Modules/: FindLibAV.cmake
libav_image_transport/include/libav_image_transport/: decoder.hpp  encoder.hpp  libav.hpp  libav_backport.hpp  libav_image_publisher.hpp  libav_image_subscriber.hpp  pix_fmt.hpp  worker.hpp
libav_image_transport/msg/: Packet.msg
libav_image_transport/src/: decoder.cpp  encoder.cpp  libav.cpp  libav_backport.cpp  libav_image_publisher.cpp  libav_image_subscriber.cpp  manifest.cpp  pix_fmt.cpp  worker.cpp
mongodb_openni_compression/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mongodb_openni_compression/action/: RecordCamera.action
mongodb_openni_compression/launch/: record.launch  record_server.launch
mongodb_openni_compression/scripts/: record_server.py
openni_saver/: CMakeLists.txt  package.xml
openni_saver/src/: cv_saver.cpp  cv_saver.h  depth_saver_node.cpp  openni_image_saver.cpp  openni_image_saver.h  openni_saver_node.cpp  rgb_saver_node.cpp  synch_saver_node.cpp
openni_saver/srv/: LoggingService.srv  StartStopRecording.srv
python/: compressor.py  compressor.py~
rosbag_openni_compression/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag_openni_compression/action/: RecordCamera.action
rosbag_openni_compression/launch/: play.launch  record.launch  record_server.launch
rosbag_openni_compression/scripts/: rosbag_record_server.py
src/: depth_decoder.cpp  depth_decoder.h  depth_encoder.cpp  depth_encoder.h  rgb_decoder.cpp  rgb_decoder.h  rgb_encoder.cpp  rgb_encoder.h  test.cpp  video_decoder.cpp  video_decoder.h  video_encoder.cpp  video_encoder.h
strandsbag/: CMakeLists.txt  package.xml
strandsbag/launch/: cleanup.launch  decompress.launch  play.launch  play2.launch  processing.launch  record.launch  record2.launch
strandsbag/scripts/: remove_files.py
strandsbag/src/: bag_player.cpp  bag_player.h  folder_player.cpp  folder_player.h  image_player.cpp  image_player_node.cpp  play_images.cpp
