<?xml version="1.0"?>
<package>
  <name>libav_image_transport</name>
  <version>0.1.2</version>
  <description>Image transport plugin using libav to compress images.</description>

  <maintainer email="nbore@kth.se">Nils Bore</maintainer>
  <author email="dominique.hunziker@gmail.com">Dominique Hunziker</author>
  <url type="website">https://github.com/dominiquehunziker/libav_image_transport</url>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>catkinized_libav</build_depend>

  <run_depend>genmsg</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>catkinized_libav</run_depend>

  <export>
    <image_transport plugin="${prefix}/libav_plugins.xml" />
  </export>
</package>
